[package]
name = "home_zircon_api"
version = "0.1.0"
authors = ["Andrey Cizov <acizov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "home_zircon_api"

[[bin]]
name = "home_zircon_api"
path = "src/main.rs"

[dependencies]
rand = "0.7.0"
rocket = "0.4.2"
#rocket = "0.5.0-dev"
rocket_cors = "0.5.0"
rocket_contrib = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.10.1"

# serde_json is just for the example, not required in general
serde_json = "1.0"
home_zircon_shared = { path = "../home-zircon-shared" }

[patch.crates-io]
#rocket = { path = "../../OS/Rocket/core/lib" }